# techbits

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py
app/templates/: account.html  base.html  cart.html  categories.html  checkout.html  header.html  index.html  product.html  product_view.html  products.html
techbits/: asgi.py  settings.py  urls.py  wsgi.py
